[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"


[project]
name = "wolpie"
version = "0.1.0"
description = "Some useful Python tooling"
readme = "README.md"
requires-python = ">=3.10, <4"
dependencies = ["requests>=2.28.0"]
license = "MIT"
keywords = ["tool"]
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 1 - Planning",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[dependency-groups]
dev = [
    "pytest>=8.0", # tests
    "pytest-cov",  # coverage (optional)
    "pre-commit",
]
docs = ["sphinx>=6.0", "sphinx-rtd-theme", "sphinx-autodoc-typehints"]


[project.urls]
"Homepage" = "https://github.com/johandielangman/wolpie"
"Repository" = "https://github.com/johandielangman/wolpie"

[tool.setuptools.packages.find]
where = ["src"]
