[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"


[project]
name = "wolpie"
version = "0.2.1"
description = "I got tired of copy-pasting the same blocks of code from project to project. So I decided to create Wolpie as my own personal swiss army knife for Python development. The one package to rule them all... for my needs at least..."
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = ["requests>=2.28.0"]
license = "MIT"
keywords = ["tool"]
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 2 - Pre-Alpha",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[dependency-groups]
dev = [
    "pytest>=8.0",  # tests
    "pytest-cov",   # coverage (optional)
    "pre-commit",
    "ruff>=0.11.5", # linting and formatting
]
docs = [
    "sphinx>=6.0",
    "sphinx-book-theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "linkify-it-py",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-favicon",
]


[project.urls]
"Homepage" = "https://wolpie.com"
"Documentation" = "https://wolpie.com"
"Repository" = "https://github.com/johandielangman/wolpie"
"Issues" = "https://github.com/johandielangman/wolpie/issues"
"Changelog" = "https://github.com/johandielangman/wolpie/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]


[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
