[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"


[project]
name = "wolpie"
version = "0.4.0"
description = "I got tired of copy-pasting the same blocks of code from project to project. So I decided to create Wolpie as my own personal swiss army knife for Python development. The one package to rule them all... for my needs at least..."
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    # GSheets
    "google-api-python-client>=2.187.0,<3.0.0",
    "google-auth-httplib2>=0.3.0,<1.0.0",
    "google-auth-oauthlib>=1.2.0,<2.0.0",

    # Generic
    "requests>=2.28.0",
    "pytz",
]
license = "MIT"
keywords = ["tool"]
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 2 - Pre-Alpha",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[dependency-groups]
test = [
    "pytest>=8.0",                      # tests
    "pytest-cov",                       # coverage (optional)
    "pydantic-settings>=2.13.1,<3.0.0",
]
lint = [
    "pre-commit",
    "ruff>=0.11.5", # linting and formatting
]
docs = [
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.7.0,<10.0.0",
    "mkdocs-material-extensions>=1.3.0,<2.0.0",
    "mkdocstrings[python]>=1.0.2,<3.0.0",
    "griffe-typingdoc>=0.3.0,<1.0.0",
    "pymdown-extensions>=10.20.0,<11.0.0",
    "black>=26.1.0,<27.0.0",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "docs" },
]

[project.urls]
"Homepage" = "https://wolpie.com"
"Documentation" = "https://wolpie.com"
"Repository" = "https://github.com/johandielangman/wolpie"
"Issues" = "https://github.com/johandielangman/wolpie/issues"
"Changelog" = "https://github.com/johandielangman/wolpie/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
